# structured-challenge-submission-system

./: .gitignore  LICENSE  README.md
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/BMC_API/: __init__.py  __main__.py
backend/BMC_API/src/: initial_data.py
backend/BMC_API/src/api/: __init__.py  application.py  exception_handlers.py  gunicorn_runner.py
backend/BMC_API/src/api/dependencies/: __init__.py  functions.py  route_dependencies.py  schemas.py
backend/BMC_API/src/api/middleware/: no_cache_middleware.py
backend/BMC_API/src/api/routes/: challenge.py  conference.py  contact.py  echo.py  monitoring.py  router.py  task.py  user.py
backend/BMC_API/src/api/routes/admin/: admin_challenge.py  admin_conference.py  admin_database.py  admin_redis.py  admin_task.py  admin_user.py
backend/BMC_API/src/api/schemas/: base_model.py  challenge_schema.py  conference_schema.py  contact_schema.py  redis_schema.py  task_schema.py  user_schema.py
backend/BMC_API/src/application/: dependencies.py
backend/BMC_API/src/application/dto/: __init__.py  challenge_dto.py  conference_dto.py  dependencies.py  task_dto.py  user_dto.py
backend/BMC_API/src/application/interfaces/: authentication.py  authorization.py  email_scheduler.py  password_hasher_impl.py
backend/BMC_API/src/application/use_cases/: __init__.py  admin_use_cases.py  base_use_cases.py  challenge_history_use_cases.py  challenge_use_cases.py  conference_use_cases.py  task_history_use_cases.py  task_use_cases.py  user_use_cases.py
backend/BMC_API/src/core/: lifetime.py  validation_errors.py
backend/BMC_API/src/core/config/: settings.py
backend/BMC_API/src/core/exceptions/: __init__.py
backend/BMC_API/src/core/logging/: logging.py
backend/BMC_API/src/domain/entities/: __init__.py  challenge_history_model.py  challenge_model.py  conference_model.py  task_history_model.py  task_model.py  user_model.py
backend/BMC_API/src/domain/interfaces/: password_hasher.py  token_cache.py
backend/BMC_API/src/domain/repositories/: __init__.py  base_repository.py  challenge_history_repository.py  challenge_repository.py  conference_repository.py  task_history_repository.py  task_repository.py  user_repository.py
backend/BMC_API/src/domain/services/: status_manager.py
backend/BMC_API/src/domain/value_objects/enums/: __init__.py  challenge_enums.py  task_enums.py  user_enums.py
backend/BMC_API/src/infrastructure/external_services/challenge_to_pdf/: __init__.py  challenge_to_pdf_converter.py  dependencies.py  export_challenge.py  export_task.py
backend/BMC_API/src/infrastructure/external_services/email/: __init__.py  email_service.py  schema.py
backend/BMC_API/src/infrastructure/external_services/redis/: dependency.py  lifetime.py  token_cache_impl.py
backend/BMC_API/src/infrastructure/persistence/: __init__.py  base.py  dependencies.py  utils.py
backend/BMC_API/src/infrastructure/persistence/dao/: __init__.py  base_dao.py  challenge_dao.py  challenge_history_dao.py  conference_dao.py  task_dao.py  task_history_dao.py  user_dao.py
backend/BMC_API/src/infrastructure/persistence/migrations/: env.py
backend/BMC_API/tests/: .coveragerc  __init__.py  conftest.py  test_admin_challenge_route.py  test_admin_conference_route.py  test_admin_database_route.py  test_admin_redis_route.py  test_admin_task_route.py  test_admin_user_route.py  test_admin_user_service.py  test_base_dao.py  test_base_dao_extended.py  test_base_service.py  test_challenge_route.py  test_challenge_service.py  test_conference_route.py  test_contact_route.py  test_echo_route.py  test_monitoring_route.py  test_task_route.py  test_task_service.py  test_user_dao.py  test_user_route.py  test_user_service.py
backend/BMC_API/tests/fixtures/: admin_user_fixtures.py  base_dao_fixtures.py  data_for_test.py  user_fixtures.py
(+110 files in other folders)
