[project]
name = "BMC_API"
version = "1.0.0"
description = ""
authors = [{ name = "Ali Emre Kavur", email = "a.kavur@dkfz.de" }]
requires-python = ">=3.13, <3.14"
readme = "README.md"
maintainers = [{ name = "Ali Emre Kavur", email = "a.kavur@dkfz.de" }]

dependencies = [
    "fastapi>=0.115.11<1.0,",
    "uvicorn[standard]<1.0,>=0.34",
    "gunicorn<24,>=23",
    "pydantic[email]<3,>=2",
    "pydantic-settings<3.0.0,>=2.1.0",
    "yarl<2.0.0,>=1.9.2",
    "ujson<6.0.0,>=5.8.0",
    "SQLAlchemy[asyncio]<3,>=2",
    "aiosqlite<1.0.0,>=0.18.0",
    "redis[hiredis]<5,>=4",
    "httptools<1.0.0,>=0.6.0",
    "opentelemetry-api<2.0.0,>=1.18.0",
    "opentelemetry-sdk<2.0.0,>=1.18.0",
    "opentelemetry-exporter-otlp<2.0.0,>=1.18.0",
    "opentelemetry-instrumentation<1.0,>=0.39b0",
    "opentelemetry-instrumentation-fastapi<1.0,>=0.39b0",
    "opentelemetry-instrumentation-redis<1.0,>=0.39b0",
    "opentelemetry-instrumentation-sqlalchemy<1.0,>=0.39b0",
    "loguru<1.0,>=0.7",
    "bcrypt<5.0,>=4.0",
    "cryptography<41.0,>=40.0",
    "python-jose<4.0.0,>=3.3.0",
    "python-multipart<1.0.0,>=0.0.6",
    "reportlab==4.3.0",
    "fastapi-utilities<1.0.0.0,>=0.1.3.1",
    "fastapi-mail<2.0.0,>=1.4.1",
    "alembic<2.0.0,>=1.15.1",
    "slowapi>=0.1.9",
    "fastapi>=0.115.12",
]

[dependency-groups]
dev = [
    "ruff",
    "pytest<8.0.0,>=7.2.1",
    "flake8~=4.0.1",
    "mypy<2.0.0,>=1.1.1",
    "isort<6.0.0,>=5.11.4",
    "pre-commit<4.0.0,>=3.0.1",
    "wemake-python-styleguide<1.0.0,>=0.17.0",
    "black<24,>=23",
    "autoflake<2.0.0,>=1.6.1",
    "pytest-cov<5.0.0,>=4.0.0",
    "anyio<4.0.0,>=3.6.2",
    "pytest-env<1.0.0,>=0.8.1",
    "fakeredis<3.0.0,>=2.5.0",
    "httpx<1.0.0,>=0.23.3",
    "pytest-order<2.0.0,>=1.1.0",
    "coverage<8.0.0,>=7.3.2",
    "pytest-loguru>=0.4.0",
]




[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "BMC_API/web/api/router.py",
]

line-length = 120
indent-width = 4

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = ["E4", "E7", "E9", "F"]
ignore = ["E722"]
# ignore = ["E722", "F841", "F401"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["BMC_API"]

[tool.mypy]
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_unused_ignores = false
warn_return_any = false
namespace_packages = true

# Remove this and add `types-redis`
# when the issue https://github.com/python/typeshed/issues/8242 is resolved.

[[tool.mypy.overrides]]
module = ['redis.asyncio']
ignore_missing_imports = true

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore:.*unclosed.*:ResourceWarning",
]

env = ["BMC_API_ENVIRONMENT=pytest", "BMC_API_DB_FILE=test_db.db"]


[tool.coverage.run]

omit = ['*__init__.py']
concurrency = ["greenlet"]


